updated ui copy and minor bug fixes

--- a/claw-shooter/src/index.css
+++ b/claw-shooter/src/index.css
@@ -39,8 +39,9 @@ body {
   left: 0;
 }
 
-/* Game view: three-column layout */
+/* Game view: three-column layout; +50% font scale for readability */
 .game-view {
+  font-size: 150%;
   width: 100%;
   min-height: 100vh;
   display: flex;
